# scribegoat

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY-NOW.md  DIRECTOR-LEVEL-REVIEW.md  FINE-TUNING-PLAN.md  LICENSE  README.md  TIER2-PLAN.md  app.py  deploy_h100.ipynb  pyproject.toml  requirements-nvidia-healthcare.txt  requirements.txt
deploy/: DEPLOY.md  PROFILE.md  h100_auto_deploy.sh  profile.sh  quick_start.sh  remote_deploy.py  verify.sh
docs/: NVIDIA-Healthcare-AI-Showcase.md
docs/benchmarks/ncu/: README.md  monai_h100_summary.csv
docs/benchmarks/ncu/latest/: LICENSE  METADATA.json  monai_h100_summary.csv
docs/operations/: production-readiness-checklist.md
scripts/: compare_ncu.py  monai_h100_benchmark.py  process_ncu_report.py
src/goatnote_scribe/: __init__.py  cli.py  config.py  fhir.py  guardrails.py  scribe.py
