[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goatnote-scribe"
version = "1.0.0"
description = "Emergency Medicine scribe with safety guardrails - H100-optimized, HIPAA-compliant"
readme = "README.md"
authors = [{name = "Brandon Dent, MD", email = "b@thegoatnote.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["medical", "ai", "hipaa", "nvidia", "h100", "healthcare", "fhir"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=2.1.0",
    "openai>=1.50.0",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "monai>=1.5.1",
    "google-cloud-healthcare>=1.11.0",
    "google-auth>=2.23.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
audio = [
    "openai-whisper>=20240930",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "black>=24.0",
    "ruff>=0.7",
    "mypy>=1.8",
    "jupyter>=1.0",
]
all = [
    "goatnote-scribe[audio,dev]",
]

[project.urls]
Homepage = "https://github.com/GOATnote-Inc/scribegoat"
Documentation = "https://github.com/GOATnote-Inc/scribegoat#readme"
Repository = "https://github.com/GOATnote-Inc/scribegoat"
Issues = "https://github.com/GOATnote-Inc/scribegoat/issues"

[project.scripts]
goat-scribe = "goatnote_scribe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["goatnote_scribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/goatnote_scribe --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

